--- a/src/Components/HeaderNav/HeaderNav.css
+++ b/src/Components/HeaderNav/HeaderNav.css
@@ -2,3 +2,15 @@
     display: flex;
     gap: 25px;
 }
+
+.header-nav-list a:hover {
+    color: #495e57;
+    transform: translateY(-3px);
+    transition: .33s ease-in;
+}
+
+.header-nav-list a.active {
+    color: #495e57;
+    transform: translateY(-3px);
+    transition: .33s ease-in;
+}
