--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -18,3 +18,23 @@
     width: 100%;
     height: 100%;
 }
+
+.header-mobile-nav {
+    display: none;
+}
+
+@media (max-width: 800px) {
+    .header-nav .nav-list {
+        gap: 15px;
+    }
+}
+
+@media (max-width: 700px) {
+    .header-nav {
+        display: none;
+    }
+
+    .header-mobile-nav {
+        display: flex;
+    }
+}
