--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,9 @@ ul {
     margin: 0 auto;
     display: flex;
 }
+
+.main-wrap {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
